crates/ddlog-syntax/tests/inline/pass/function_definitions.rast
ROOT@0..31
  COMMENT@0..12 "// kind:item"
  WHITESPACE@12..13 "\n"
  ITEM@13..31
    FUNC_DEF@13..31
      FUNC_MODS@13..13
      FUNCTION@13..21 "function"
      WHITESPACE@21..22 " "
      FUNC_NAME@22..25
        IDENT@22..25 "foo"
      FUNC_ARGS@25..27
        L_PAREN@25..26 "("
        R_PAREN@26..27 ")"
      WHITESPACE@27..28 " "
      BLOCK@28..30
        L_CURLY@28..29 "{"
        R_CURLY@29..30 "}"
      WHITESPACE@30..31 "\n"
